Independent Publisher 2: Move site logo max-width to media query, so that the logo displays properly on mobile. Fixes #193

--- a/independent-publisher-2/style.css
+++ b/independent-publisher-2/style.css
@@ -2171,7 +2171,6 @@ p.no-comments {
 .custom-logo {
 	display: block;
 	width: auto;
-	max-width: 750px;
 	height: auto;
 	max-height: 150px;
 	margin: 0 auto .875em;
@@ -3152,7 +3151,10 @@ time.published + .updated {
 --------------------------------------------------------------*/
 
 @media screen and (min-width: 48.9375em) {
-
+	
+	.custom-logo {
+		max-width: 750px;
+	}
 	.comment-form input[type="text"],
 	.comment-form input[type="password"],
 	.comment-form input[type="email"],
